--- a/index.html
+++ b/index.html
@@ -39,7 +39,29 @@
         
 
         <div class="content">
-            <div class="hex_info"></div>
+            <div class="about_secret">
+                <div class="about_secret_title">
+                    <h2>客人總是在詢問<br>這麼好吃的祕訣是什麼</h2>
+                </div>
+                
+                <ul class='three_secret clearfix'>
+                    <li>
+                        <img src="img/about_secret/feature_1.png" alt="">
+                        <h3>臺灣本土蔬菜</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit rerum aliquid nisi. Veniam distinctio, possimus velit ipsam quas aliquid beatae consequuntur voluptate ab optio quibusdam vero in magni, doloribus corporis.</p>
+                    </li>
+                    <li>
+                        <img src="img/about_secret/feature_2.png" alt="">
+                        <h3>專業米其林廚師</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit rerum aliquid nisi. Veniam distinctio, possimus velit ipsam quas aliquid beatae consequuntur voluptate ab optio quibusdam vero in magni, doloribus corporis.</p>
+                    </li>
+                    <li>
+                        <img src="img/about_secret/feature_3.png" alt="">
+                        <h3>對於專業不能退讓</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit rerum aliquid nisi. Veniam distinctio, possimus velit ipsam quas aliquid beatae consequuntur voluptate ab optio quibusdam vero in magni, doloribus corporis.</p>
+                    </li>
+                </ul>
+            </div>
             <div class="chef_info"></div>
             <div class="customer_impression"></div>
             <div class="form"></div>
