--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
                     </li>
                 </ul>
             </div>
-            <div class="chef_info"></div>
+            <div class="chef_info clearfix">
+                <img src="img/chef_info/main_chef_brown.png" alt="" class='chef_img'>
+                <div class="chef_main_content">
+                    <h2>今日主廚：帕金森、梅在帕</h2>
+                    <h3>Today Chef: Plum in Shock</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum cupiditate tempora molestiae voluptatibus accusantium facere commodi, esse tenetur facilis quidem, sunt cum quisquam nemo dignissimos laudantium unde consectetur similique. Impedit accusantium ea libero animi voluptatem pariatur dolor dolore aliquam recusandae architecto deserunt similique sunt suscipit repellat illum earum eaque laudantium, dolores explicabo est cum aut sit, veritatis tempore. Molestiae eaque rem eos cum hic vero dolorum debitis. Cum quaerat facilis odio veniam hic quia pariatur ullam neque earum reiciendis consequuntur iste iusto vel blanditiis </p>
+                </div>
+                
+            </div>
             <div class="customer_impression"></div>
             <div class="form"></div>
         </div>
