--- a/index.html
+++ b/index.html
@@ -71,7 +71,31 @@
                 </div>
                 
             </div>
-            <div class="customer_impression"></div>
+            <div class="customer_impression">
+                <h2>聽聽別人的感想</h2>
+                <ul class="customers clearfix">
+                    <img src="img/customer_impression/avatar_1.png" alt="">
+                    <li>
+                        <h3>高雄一口吃</h3>
+                        <p>自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                        <span>-- 產品經理</span>
+                    </li>
+
+                    <img src="img/customer_impression/avatar_2.png" alt="">
+                    <li>
+                        <h3>廟口小霸王</h3>
+                        <p>自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                        <span>-- 金身道士</span>
+                    </li>
+
+                    <img src="img/customer_impression/avatar_3.png" alt="">
+                    <li>
+                        <h3>春天也來了</h3>
+                        <p>自從吃了這家餐廳以後，我口水連續流了一個多月都沒停，下次不要再被我遇到，不然我一定連他們桌子都啃下去。</p>
+                        <span>-- 美麗萬分</span>
+                    </li>
+                </ul>
+            </div>
             <div class="form"></div>
         </div>
 
