--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="customer_impression">
                 <h2>聽聽別人的感想</h2>
-                <ul class="customers clearfix">
+                <ul class="customers">
                     <img src="img/customer_impression/avatar_1.png" alt="">
                     <li>
                         <h3>高雄一口吃</h3>
