--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
                 </ul>
             </div>
             <div class="chef_info clearfix">
-                <img src="img/chef_info/main_chef_brown.png" alt="" class='chef_img'>
-                <div class="chef_main_content">
-                    <h2>今日主廚：帕金森、梅在帕</h2>
-                    <h3>Today Chef: Plum in Shock</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum cupiditate tempora molestiae voluptatibus accusantium facere commodi, esse tenetur facilis quidem, sunt cum quisquam nemo dignissimos laudantium unde consectetur similique. Impedit accusantium ea libero animi voluptatem pariatur dolor dolore aliquam recusandae architecto deserunt similique sunt suscipit repellat illum earum eaque laudantium, dolores explicabo est cum aut sit, veritatis tempore. Molestiae eaque rem eos cum hic vero dolorum debitis. Cum quaerat facilis odio veniam hic quia pariatur ullam neque earum reiciendis consequuntur iste iusto vel blanditiis </p>
-                </div>
+                <ul>
+                    <li class="chef_img"></li>
+                    <li class="chef_intro">
+                        <h2>今日主廚：帕金森、梅在帕<br>Today Chef: Plum in Shock</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab atque id corrupti quae assumenda quidem ipsum? Fugit, molestias accusantium aliquam natus dignissimos veniam architecto quas quasi voluptas assumenda aut provident?Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quae atque obcaecati, dolorem neque officiis quia quidem earum ratione! Commodi eos repudiandae, hic expedita a quaerat accusamus nostrum reiciendis nesciunt.</p>
+                    </li>
+                </ul>
                 
             </div>
             <div class="customer_impression">
@@ -120,7 +121,7 @@
                     <input type="email" name="mail" id="mail" placeholder="test@gmail.com">
 
                     <label for="people">人數</label>
-                    <input type="number" name="people" id="people">
+                    <input type="text" name="people" id="people">
 
                     <h3>是否需要素食</h3>
 
