--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta name="description" content="咬一口就無法忘懷的漢堡。">
+    <meta name='keywords' content="六角西餐廳, 六角大漢堡">
+
+    <meta name='author' content="Bucky Chu">
+
+    <meta property="og:title" content=" 咬一口就無法忘懷的漢堡  | 六角西餐廳">
+    <meta property="og:description" content="七夕絕對無法錯過的好滋味">
+    <meta property="og:site_name" content="六角西餐廳">
+    <meta property="og:locale" content="zh_TW">
+
+    <!-- fontawesome-CDN -->
     <script src="https://kit.fontawesome.com/85251e146e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <!-- jQuery-CDN -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js'></script>
-    <title>Document</title>
+    <title>六角西餐廳</title>
 </head>
 <body>
     <div class="wrap">
