--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="banner">
             <div class="header clearfix">
                 <h1>
-                    <a href="http://">六角西餐廳</a>
+                    <a href="index.html">六角西餐廳</a>
                 </h1>
 
                 <ul class="nav clearfix">
@@ -190,7 +190,7 @@
             <ul class="footer_link clearfix">
                 <li class="footer_hex_link">
                     <h2>
-                        <a href="http://">六角西餐廳</a>
+                        <a href="index.html">六角西餐廳</a>
                     </h2>
                 </li>
                 <li class="social_media">
