--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
                 <ul class="nav clearfix">
                     <li>
-                        <a href="http://">特色</a>
+                        <a href="index.html#about_secret">特色</a>
                     </li>
                     <li>
-                        <a href="http://">主廚</a>
+                        <a href="index.html#chef_info"">主廚</a>
                     </li>
                     <li>
-                        <a href="http://">地圖</a>
+                        <a href="index.html#booking">地圖</a>
                     </li>
                 </ul>
 
@@ -59,7 +59,7 @@
         
 
         <div class="content">
-            <div class="about_secret">
+            <div class="about_secret" id="about_secret">
                 <div class="about_secret_title">
                     <h2>客人總是在詢問<br>這麼好吃的祕訣是什麼</h2>
                 </div>
@@ -82,7 +82,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="chef_info">
+            <div class="chef_info" id="chef_info">
                 <ul class="clearfix">
                     <li class="chef_img"></li>
                     <li class="chef_intro">
@@ -119,7 +119,7 @@
                 </ul>
             </div>
 
-            <form action="booking" method="post" class="booking clearfix">
+            <form action="booking" method="post" class="booking clearfix" id="booking">
                 <h2>我們的位置不太夠坐<br>要不要先訂位呢？</h2>
 
                 <ul class="clearfix">
