--- a/layout.html
+++ b/layout.html
@@ -32,13 +32,13 @@
 
                 <ul class="nav clearfix">
                     <li>
-                        <a href="http://">特色</a>
+                        <a href="index.html#about_secret">特色</a>
                     </li>
                     <li>
-                        <a href="http://">主廚</a>
+                        <a href="index.html#chef_info">主廚</a>
                     </li>
                     <li>
-                        <a href="http://">地圖</a>
+                        <a href="index.html#booking">地圖</a>
                     </li>
                 </ul>
 
