--- a/login.html
+++ b/login.html
@@ -40,6 +40,12 @@
                     <li>
                         <a href="index.html#booking">地圖</a>
                     </li>
+                    <li>
+                        <a href="cart.html">線上訂購美食</a>
+                    </li>
+                    <li>
+                        <a href="login.html">登入</a>
+                    </li>
                 </ul>
 
                 <a href="#" class="showmenu">
@@ -82,11 +88,13 @@
                         </div>
                         
                         <a href="http://">忘記密碼？</a>
+                        <div class="login_and_reg_btn clearfix">
+                            <!-- <input type="submit" value="註冊" class="reg_btn"> -->
+                            <input type="button" value="註冊" class="reg_btn" onclick="window.location.href='register.html'">
+                            <input type="submit" value="登入" class="login_btn">
+                        </div>
                     </form>
-                    <div class="login_and_reg_btn clearfix">
-                        <input type="submit" value="註冊" class="reg_btn">
-                        <input type="submit" value="登入" class="login_btn">
-                    </div>
+                    
                 </div>
             </div>
         </div>
