--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                     <li>
                         <a href="index.html#booking">地圖</a>
                     </li>
+                    <li>
+                        <a href="cart.html">線上訂購美食</a>
+                    </li>
+                    <li>
+                        <a href="login.html">登入</a>
+                    </li>
                 </ul>
 
                 <a href="#" class="showmenu">
